src/tui/snapshots/herald__tui__dialogs__tests__dialog_default_state.snap
---
source: src/tui/dialogs.rs
expression: output
---




          ┌ New Session ─────────────────────────────────────────────┐
          │ Nickname:                                                │
          │                                                          │
          │ Provider:                                                │
          │    Claude Code                                           │
          │ Directory:                                               │
          │                                                          │
          │ Worktree:                                                │
          │  [ ] isolate in git worktree                             │
          │ Prompt:                                                  │
          │                                                          │
          │                                                          │
          │                                                          │
          │ Enter:next  Tab:next field  Esc:cancel                   │
          └──────────────────────────────────────────────────────────┘
