src/tui/snapshots/herald__tui__dialogs__tests__dialog_long_prompt_does_not_overflow.snap
---
source: src/tui/dialogs.rs
expression: output
---




          ┌ New Session ─────────────────────────────────────────────┐
          │ Nickname:                                                │
          │  sess                                                    │
          │ Provider:                                                │
          │    Claude Code                                           │
          │ Directory:                                               │
          │                                                          │
          │ Worktree:                                                │
          │  [ ] isolate in git worktree                             │
          │ Prompt:                                                  │
          │  set of characters it overflows all the way to the right │
          │                                                          │
          │                                                          │
          │ Enter:launch  Tab:next field  Esc:cancel                 │
          └──────────────────────────────────────────────────────────┘
