src/tui/snapshots/herald__tui__dialogs__tests__dialog_with_input.snap
---
source: src/tui/dialogs.rs
expression: output
---






          ┌ New Session ─────────────────────────────────────────────┐
          │ Nickname:                                                │
          │  my-session                                              │
          │ Directory:                                               │
          │  /home/user/project                                      │
          │ Prompt:                                                  │
          │  fix the tests                                           │
          │                                                          │
          │                                                          │
          │ Enter:launch  Tab:next field  Esc:cancel                 │
          └──────────────────────────────────────────────────────────┘
